// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cli > builds scan and transform *.css 1`] = `
".btn {
    --un-bg-opacity:1;background-color:rgb(248 113 113 / var(--un-bg-opacity)) /* #f87171 */;padding:0.5rem;
  }
body {
  color: white;
  --un-bg-opacity:1;background-color:rgb(248 113 113 / var(--un-bg-opacity)) /* #f87171 */;
}.dark body{--un-bg-opacity:1;background-color:rgb(96 165 250 / var(--un-bg-opacity)) /* #60a5fa */;}"
`;

exports[`cli > builds uno.css 1`] = `
"/* layer: default */
.max-w-screen-md{max-width:768px;}
.p-4{padding:1rem;}"
`;

exports[`cli > should correctly deduplicate files of different types containing @media 1`] = `
"@media (min-width: 640px){.box{padding:0.5rem;}}
/* layer: default */
@media (min-width: 768px){
.md\\:p-4{padding:1rem;}
}
@media (min-width: 1024px){
.lg\\:p-8{padding:2rem;}
}"
`;

exports[`cli > should correctly deduplicate files of different types containing @media 2`] = `"@media (min-width: 640px){.box{padding:0.5rem;}}"`;

exports[`cli > supports directives transformer 1`] = `".btn-center{margin-top:0;margin-bottom:0;text-align:center;font-weight:500;}"`;

exports[`cli > supports directives transformer 2`] = `".btn-center{@apply text-center my-0 font-medium;}"`;

exports[`cli > supports unocss.config.js 1`] = `
"/* layer: shortcuts */
.box{margin-left:auto;margin-right:auto;max-width:80rem;border-radius:0.375rem;--un-bg-opacity:1;background-color:rgb(243 244 246 / var(--un-bg-opacity)) /* #f3f4f6 */;padding:1rem;--un-shadow:var(--un-shadow-inset) 0 1px 2px 0 var(--un-shadow-color, rgb(0 0 0 / 0.05));box-shadow:var(--un-ring-offset-shadow), var(--un-ring-shadow), var(--un-shadow);}"
`;

exports[`cli > supports variantGroup transformer 1`] = `
"/* layer: default */
.border{border-width:1px;}
.border-red{--un-border-opacity:1;border-color:rgb(248 113 113 / var(--un-border-opacity));}
.border-solid{border-style:solid;}
.p-4{padding:1rem;}"
`;

exports[`cli > supports variantGroup transformer 2`] = `"<div class="p-4 border border-solid border-red"></div>"`;

exports[`cli > use default preset via cli option 1`] = `
".btn { padding:calc(var(--spacing) * 2);background-color:color-mix(in srgb, var(--colors-red-DEFAULT) var(--un-bg-opacity), transparent); }@property --un-bg-opacity{syntax:"<percentage>";inherits:false;initial-value:100%;}@supports (color: color-mix(in lab, red, red)){.btn{background-color:color-mix(in oklab, var(--colors-red-DEFAULT) var(--un-bg-opacity), transparent);}}
/* layer: properties */
@property --un-bg-opacity{syntax:"<percentage>";inherits:false;initial-value:100%;}
/* layer: default */
.bg-blue{background-color:color-mix(in srgb, var(--colors-blue-DEFAULT) var(--un-bg-opacity), transparent);}
@supports (color: color-mix(in lab, red, red)){
.bg-blue{background-color:color-mix(in oklab, var(--colors-blue-DEFAULT) var(--un-bg-opacity), transparent);}
}"
`;
